--- a/src/layout/Sidebar/style.scss
+++ b/src/layout/Sidebar/style.scss
@@ -79,7 +79,7 @@
 
   #menu-btn {
     &:hover {
-      background-color: transparent
+      background-color: transparent;
     }
   }
 
@@ -90,7 +90,7 @@
     @include screen(900px) {
       @include flex-center(row, center, center);
       width: 100%;
-      height: 100%
+      height: 100%;
     }
 
     .navigation-buttons {
@@ -104,7 +104,6 @@
         padding: 0;
         width: 50px;
       }
-
     }
   }
 
